force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <label>Competitor Information</label>
    <nameField>
        <displayFormat>Competitor-{0000}</displayFormat>
        <label>Competitor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>