force-app/main/default/objects/Competitor__c/fields/Ice_Cream_Brand__c.field-meta.xml
<CustomField>
    <fullName>Ice_Cream_Brand__c</fullName>
    <label>Ice Cream Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amul Ice cream</fullName>
            </value>
            <value>
                <fullName>Kwality Wall&apos;s</fullName>
            </value>
            <value>
                <fullName>Havmor</fullName>
            </value>
            <value>
                <fullName>Ideal Ice Cream</fullName>
            </value>
            <value>
                <fullName>Dairy day Ice Cream</fullName>
            </value>
            <value>
                <fullName>Creambell Ice Cream</fullName>
            </value>
            <value>
                <fullName>Dinshaw’s Ice Cream</fullName>
            </value>
            <value>
                <fullName>Arun Ice Cream</fullName>
            </value>
            <value>
                <fullName>Ullas Ice Creams</fullName>
            </value>
            <value>
                <fullName>Joy</fullName>
            </value>
            <value>
                <fullName>Lazza</fullName>
            </value>
            <value>
                <fullName>Mercely&apos;s</fullName>
            </value>
            <value>
                <fullName>Skei Ice Cream</fullName>
            </value>
            <value>
                <fullName>Milky Mist</fullName>
            </value>
            <value>
                <fullName>Nandini Ice Creams</fullName>
            </value>
            <value>
                <fullName>Dairy Rich Ice Cream</fullName>
            </value>
            <value>
                <fullName>Other Ice Cream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>