force-app/main/default/objects/Competitor__c/fields/Visit_Task__c.field-meta.xml
<CustomField>
    <fullName>Visit_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Task</label>
    <referenceTo>Visit_Task__c</referenceTo>
    <relationshipLabel>Competitors Information</relationshipLabel>
    <relationshipName>Competitors_Information</relationshipName>
    <type>Lookup</type>
</CustomField>