force-app/main/default/objects/Competitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Ice_Cream_Brand__c</columns>
    <columns>Quantity__c</columns>
    <columns>Retailer_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>